Fixed Mermaid.js styles for dark mode (8.3.0 regression)

--- a/src/assets/stylesheets/main/integrations/_mermaid.scss
+++ b/src/assets/stylesheets/main/integrations/_mermaid.scss
@@ -25,7 +25,7 @@
 // ----------------------------------------------------------------------------
 
 // All definitions
-:root {
+:root > * {
   --md-mermaid-font-family:            var(--md-text-font-family), sans-serif;
 
   // Colors
